# OrinDetection_tracker

./: .gitignore  CMakeLists.txt  README.md  build.sh  rev_win.sh  run.sh
include/: common.h
include/ByteTrack/: BYTETracker.h  KalmanFilter.h  Object.h  STrack.h
include/KCF/: calculateIOU.h  ffttools.h  kcftracker.h  recttools.h  tracker.h  udp_operation.h
include/utils/: detect.h  ip_tools.h  threadsafe_queue.h  timer.h  timestamp.h
install/: orindectection_tracker  rev_win
src/ByteTrack/: BYTETracker.cpp  STrack.cpp  detect.cpp
src/KCF/: calculateIOU.cpp  ffttools.cpp  fhog.cpp  kcftracker.cpp  recttools.cpp
src/app/: CMakeLists.txt  orindectection_tracker.cpp  orindectection_tracker_origin.cpp  rev_win.cpp
src/utils/: ip_tools.cpp  timer.cpp  timestamp.cpp  udp_operation.cpp
toolchains/: .gitignore  orin_native.toolchain.cmake
